# code-claim-verifier

./: .gitignore  README.md  pyproject.toml
.claude/reviews/: FINAL-REPORT.md  arch-review.md  correctness-review.md  red-team-audit.md  round2-arch-review.md  round2-correctness-review.md  round2-red-team-audit.md  round2-security-review.md  round3-arch-review.md  round3-correctness-review.md  round3-red-team-audit.md  round3-security-review.md  round4-arch-review.md  round4-correctness-review.md  round4-security-review.md  security-review.md
.github/workflows/: deploy-docs.yml
code_claim_verifier/: __init__.py  __main__.py  calibrator.py  cli.py  engine.py  extractor.py  grep.py  language.py  security.py  tools.py  types.py
code_claim_verifier/eval/: __init__.py  calibration_eval.py  extraction_eval.py  report.py  runner.py  verification_eval.py
code_claim_verifier/providers/: anthropic_provider.py  openai_provider.py
code_claim_verifier/verifiers/: __init__.py  auth_claims.py  file_claims.py  import_claims.py  security_claims.py  symbol_claims.py
docs/superpowers/plans/: 2026-06-15-ccv-improvements.md
docs/superpowers/specs/: 2026-06-15-ccv-improvements-design.md
eval/: dataset.jsonl
eval/cybergym/: analyze.py  generate.py  gt.py  manifest.jsonl  models.py  prepare.py  prompts.py  run_pipeline.py  utils.py  verify.py
eval/cybergym/analysis/: summary.json
eval/fixtures/go_repo/: go.mod  main.go
eval/fixtures/python_repo/: main.py  requirements.txt  utils.py
eval/fixtures/ts_repo/: index.ts  package-lock.json
paper/: main.tex  references.bib
paper/sections/: background.tex  conclusion.tex  design.tex  discussion.tex  evaluation.tex  introduction.tex  problem.tex  related.tex
site/: mkdocs.yml
site/docs/: index.md
site/docs/architecture/: chaining.md  overview.md
site/docs/getting-started/: installation.md  quickstart.md
site/docs/guides/: batch-verify.md  claim-types.md  cli.md  custom-types.md
site/docs/reference/: api.md  claim-taxonomy.md  eval.md
tests/: test_auth_claims.py  test_batch.py  test_calibrator_v2.py  test_cli.py  test_cybergym_analyze.py  test_cybergym_gt.py  test_cybergym_prepare.py  test_cybergym_utils.py  test_cybergym_verify.py  test_engine.py  test_eval.py  test_extractor_v2.py  test_grep.py  test_integration.py  test_tools.py  test_types.py
(+91 files in other folders)
