[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-claim-verifier"
version = "0.1.0"
description = "Deterministic verification of LLM security triage claims against source code"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Ugo Giordano"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["security", "llm", "verification", "hallucination", "triage", "claims"]

[project.urls]
Homepage = "https://github.com/ugiordan/code-claim-verifier"
Repository = "https://github.com/ugiordan/code-claim-verifier"

[tool.setuptools.packages.find]
include = ["code_claim_verifier*"]
